
	* src/stm8/ralloc2.cc,
	  src/stm8/ralloc.c,
	  src/stm8/gen.h,
	  src/stm8/gen.c,
	  support/regression/tests/bp.c,
	  support/regression/tests/gcc-torture-execute-20071030-1.c,
	  support/regression/tests/gcc-torture-execute-990513-1.c,
	  support/regression/tests/gcc-torture-execute-pr47538.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c,
	  support/regression/tests/bug2094505.c:
	  Support for extended stack on stm8.

2013-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient pointer access, more efficient loading of constants to stack, fix handling of shift count deadness.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix ldw pointer write (bug #2174).
	* support/regression/tests/gcc-torture-execute-pr47538.c:
	  Disable volatile test affected by bug #2171.
	* src/stm8/ralloc2.cc:
	  Implement heuristic bias for register assignment.

2013-05-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient zeroing by pointer, more efficient unsigned cast, preparations for more efficient pointer access.
	* src/SDCCopt.c:
	  Allow offset in pointer read.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix handling of N and Z flag in ldw.
	* src/stm8/main.c:
	  More efficient initialization.

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient addition.

2013-05-25 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCopt.c: fixed bug #2165 - "Broken comparison" by disableing
	  optimization of comparision unsigned with 2^n literal since it is broken
	* support/regression/test/compare_2_n.c: added test for bug #2165

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* Merged stm8 branch.

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-1.c:
	  STM8: Disable failing tests.

2013-05-25 Borut Razem <borut.razem AT gmail.com>
